heapuse-tests/tests/ui/fail-derive-wrong-attrs-skip.stderr
error: `#[heap_size(skip)]` is only allow with a container attribute `#[heap_size]`.
 --> tests/ui/fail-derive-wrong-attrs-skip.rs:8:17
  |
8 |     #[heap_size(skip)]
  |                 ^^^^

error: `#[heap_size(skip)]` is only allow with a container attribute `#[heap_size]`.
  --> tests/ui/fail-derive-wrong-attrs-skip.rs:14:17
   |
14 |     #[heap_size(skip)]
   |                 ^^^^
